# advent-of-code

./: .gitignore  Cargo.toml  README.md
aoc2024/: Cargo.toml  justfile
aoc2024/src/: day1.rs  day2.rs  day3.rs  day5.rs  day6.rs  day7.rs  lib.rs  main.rs
